welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:34: error: not found: value recuel
		recule();recuel();
                         ^